up mới nhất nhé

--- a/tour_mvc/public/css/login.css
+++ b/tour_mvc/public/css/login.css
@@ -5,7 +5,7 @@ body{
 .container{
 	height: 100vh;
 	width: 100vw;
-	background-image: url(img/backgroud.jpg);
+	background-image: url(public/img/backgroud.jpg);
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-size: 100% 100%;
